# MemoTrie

./: .gitignore  MemoTrie.cabal
examples/: Generic.hs
src/Data/: MemoTrie.hs  evaluation
