name:          MemoTrie
version:       0.6.11
cabal-version: >=1.10
synopsis:      Trie-based memo functions
category:      Data
description:
  MemoTrie provides a basis for memoized functions over some domains,
  using tries.  It's based on ideas from Ralf Hinze and code from
  Spencer Janssen. Generic support thanks to Sam Boosalis.
  .
  Project wiki page: <http://haskell.org/haskellwiki/MemoTrie>
  .
  &#199; 2008-2019 by Conal Elliott; BSD3 license.

homepage:      https://github.com/conal/MemoTrie
author:        Conal Elliott 
maintainer:    conal@conal.net
copyright:     (c) 2008-2019 by Conal Elliott
license:       BSD3
license-file:  COPYING
stability:     experimental
build-type:    Simple

source-repository head
  type:     git
  location: git://github.com/conal/MemoTrie.git

flag examples
  description: "examples"
  default:     True
  manual:      True

library
  hs-source-dirs:   src
  build-depends:    base >=4.8.0.0 && <5
  exposed-modules:  Data.MemoTrie
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wunused-packages -Wcompat -Widentities -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields -Wunrecognised-pragmas
    -Wmissing-deriving-strategies -Wunticked-promoted-constructors
    -Winvalid-haddock -Woperator-whitespace -Wredundant-bang-patterns

executable generic
  if !flag(examples)
    buildable: False

  main-is:          Generic.hs
  ghc-options:      -Wall -finfo-table-map -fdistinct-constructor-tables -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:   examples
  default-language: Haskell2010
  build-depends:
      base
    , MemoTrie
    , ghc-debug-stub
